# maelstrom

./: ARCHITECTURE.md  Cargo.toml  PLAN.md  README.md  TODO.md  test_style.rs  test_svg.rs
apps/desktop/: Cargo.toml
apps/desktop/shaders/: linear_image.wgsl
apps/desktop/src/: app.rs  main.rs  message.rs  theme.rs
apps/desktop/src/business/: cache.rs  gpu.rs  mod.rs  workspace.rs
apps/desktop/src/components/: center_stage.rs  control_panel.rs  control_panel_bottom.rs  control_panel_top.rs  divider.rs  linear_image_view.rs  mod.rs  sidebar_left.rs  sidebar_right.rs
apps/desktop/src/components/common/: mod.rs  styled_tooltip.rs  svg_button.rs
apps/desktop/src/controllers/: imported_directories.rs  mod.rs
apps/desktop/src/render/: gpu.rs
apps/desktop/src/state/: develop.rs  directories.rs  mod.rs  navigator.rs  state_error.rs  types.rs  workspace.rs
apps/desktop/src/update/: catalog.rs  develop.rs  directories.rs  helpers.rs  import.rs  mod.rs  navigator.rs  pane_grid.rs  preview.rs  selection.rs  sidebar.rs  workspace.rs
apps/tester/: Cargo.toml  catalog.mcat-wal
apps/tester/maelstrom_catalog/: catalog.mcat-wal
apps/tester/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: hash.rs  lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  lib.rs  node.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs  linear_image.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs  png.rs  png_loaeder.rs
crates/io/src/catalog/: catalog.rs  catalog_error.rs  edit_graph.rs  mod.rs  turso.rs
crates/io/src/common/: linear_srgb.rs  mod.rs  srgb_to_linear.rs
crates/io/src/image_files/: helpers.rs  jpeg.rs  mod.rs  png.rs  supported_image_file_types.rs
crates/io/src/metadata/: metadata.rs  mod.rs
crates/ops/: Cargo.toml
crates/ops/src/: downsample.rs  downsample_fixed.rs  exposure.rs  (+2 more)
crates/previews/: Cargo.toml
(+5 files in other folders)
