[package]
name = "io"
version = "0.1.0"
edition = "2024"

[dependencies]
maelstrom_image = { path = "../image", package = "image" }
maelstrom_core = { path = "../core", package = "core"}
image = "0.25.9"
turso = "0.4.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
kamadak-exif = "0.6.1"
